@@ -81,7 +81,10 @@ const char *dc1394_error_strings[DC1394_ERROR_NUM] =
   "IOCTL failure",
   "Capture is not set",
   "Capture is running",
-  "RAW1394 failure"
+  "RAW1394 failure",
+  "Basler error: no more SFF chunks",
+  "Basler error: corrupted SFF chunk",
+  "Basler error: unknown SFF chunk"
 };
 
 /*
